# mpxx

./: .gitignore  LICENSE  Makefile  README.md  cbuild.conf
.cbuild/LIB/mpxx/: HEADERS  LOCAL_HEADERS  SOURCES  TARGET_DEPS  TARGET_INC  TARGET_LIBS  TARGET_PCDEPS  TVARS
.cbuild/PRJ/: AUTOLINK  BINS  BINS_ONLY  CCVARS  HAS  HEADER_DIRS  HLIBS  LIBS  LOCAL_PKGCONFIGS  MANPAGES  NOCOV  OPTS  PKGS  PLIBS  PLUGS  SVCS  TSTS
.cbuild/TST/mpxx_msg/: HEADERS  SOURCES  TARGET_INC  TARGET_LINK  TVARS
sources/: CMakeLists.txt
sources/include/mpxx/mpxx/: access.hpp  compiler.hpp  define.hpp  file.hpp  mpxx.hpp  msgpack.hpp  mstruct.hpp  tag.hpp  tuple_utils.hpp  utils.hpp  visitors.hpp
sources/include/mpxx/mpxx/macros/: define_base.hpp  enum.hpp  escape.hpp  field.hpp  fields.hpp
sources/include/mpxx/mpxx/rpc/: codec.hpp  decoder.hpp  encoder.hpp  id_types.hpp  pipe.hpp  protocol.hpp
sources/include/mpxx/mpxx/tpl/: tpl.hpp  tpl_recursion.hpp
sources/libraries/mpxx/mpxx/: utils.cpp
sources/tests/mpxx_enum/: test.cpp
sources/tests/mpxx_limits/: test.cpp
sources/tests/mpxx_msg/: CMakeLists.txt  test.cpp
sources/tests/mpxx_rpc/: test.cpp
